Fix spacing on client tech. block

--- a/styles/technology.less
+++ b/styles/technology.less
@@ -29,5 +29,14 @@
   margin: 0 auto;
   max-width: 725px;
   padding: 0 2em;
+}
 
+#prx-technology-clients-wrapper {
+  margin: 0 auto;
+  padding: 0 2em;
+
+  & > div {
+    margin: 0 auto;
+    max-width: 1080px;
+  }
 }
